--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "motion": "^12.23.25",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.10.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.4",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
